@@ -238,7 +238,6 @@ list(APPEND WebCorePlatformGTK_SOURCES
     platform/gtk/PlatformScreenGtk.cpp
     platform/gtk/PlatformWheelEventGtk.cpp
     platform/gtk/RedirectedXCompositeWindow.cpp
-    platform/gtk/RenderThemeGtk.cpp
     platform/gtk/ScrollbarThemeGtk.cpp
     platform/gtk/SharedBufferGtk.cpp
     platform/gtk/SharedTimerGtk.cpp
@@ -248,6 +247,8 @@ list(APPEND WebCorePlatformGTK_SOURCES
     platform/gtk/WebKitAuthenticationWidget.cpp
     platform/gtk/WidgetBackingStoreGtkX11.cpp
     platform/gtk/WidgetGtk.cpp
+
+    rendering/RenderThemeGtk.cpp
 )
 
 if (WTF_USE_GEOCLUE2)
